tests/snapshots/scripts_sanitized/fmSyntaxColorizer/fmSyntaxColorizer - ID 64/Syntax - ID 56/Add all - ID 53.txt.snap
---
source: src/main.rs
expression: output_content
---
# 20121102 MrW But don&apos;t add GroupTitles
# 20121102 MrW Adds the currently found commands

Script ausführen [ Aus Liste ; "HALT if not browse mode" ]

Schreibe Änderung Datens./Abfrage [ Mit Dialog: OFF ]
Gehe zu Layout [ Layout: "Syntax" ; Animation: Ohne ]
Ersetze alle Feldwerte [ _Syntax::On ; Durch Berechnung ersetzen: Falls( NICHT _Syntax::_kIsGroupTitle ; 1 ) ]
Schreibe Änderung Datens./Abfrage [ Mit Dialog: OFF ]
