tests/snapshots/scripts_sanitized/fmSyntaxColorizer/fmSyntaxColorizer - ID 64/Syntax - ID 56/Duplicate Syntax - ID 114.txt.snap
---
source: src/main.rs
expression: output_content
---
# 20210916 MrW Removed lingering pesky German :D
# 20190524 MrW Added FM-Version and fixed varname
# 20121101 MrW 

AnwenderAbbruchZulassen setzen [ OFF ]
Fehleraufzeichnung setzen [ ON ]

Variable setzen [ $DlgTitle ; Hole( ScriptName ) ]

Wenn [ Hole( AnzahlGefundeneDatensätze ) = 0 ]
	Aktuelles Script verlassen []
Ende (wenn)

# Duplicate Syntax
Variable setzen [ $Sort ; Falls(
				Hole ( Sortierstatus ) ≠ 1 ; "" ;
				Hole( DatensatzPositionInErgebnismenge ) = Hole( AnzahlGefundeneDatensätze ) ; "" ;
				(_Syntax::Sort + HoleNtenDatensatz( _Syntax::Sort ; Hole( DatensatzPositionInErgebnismenge ) + 1 ) ) / 2
				) ]
Feldwert setzen [ _Home::_gInputText1 ; _Syntax::Command_EN ]
Feldwert setzen [ _Home::_gInputText2 ; Syntax.GUISyntax::Command ]
Feldwert setzen [ _Home::_gInputText3 ; _Syntax::FM_Version ]
Schreibe Änderung Datens./Abfrage [ Mit Dialog: OFF ]
Eigenes Dialogfeld anzeigen [ ⚠️ PARAMETER "Title" NOT PARSED ⚠️ ; ⚠️ PARAMETER "Message" NOT PARSED ⚠️ ; ⚠️ PARAMETER "Button1" NOT PARSED ⚠️ ; ⚠️ PARAMETER "Button2" NOT PARSED ⚠️ ; ⚠️ PARAMETER "Button3" NOT PARSED ⚠️ ; ⚠️ PARAMETER "Field1" NOT PARSED ⚠️ ; Target: _Home::_gInputText1 ; ⚠️ PARAMETER "Label" NOT PARSED ⚠️ ; ⚠️ PARAMETER "Field2" NOT PARSED ⚠️ ; Target: _Home::_gInputText2 ; ⚠️ PARAMETER "Label" NOT PARSED ⚠️ ; ⚠️ PARAMETER "Field3" NOT PARSED ⚠️ ; Target: _Home::_gInputText3 ; ⚠️ PARAMETER "Label" NOT PARSED ⚠️ ]
Variable setzen [ $Command_EN ; _Home::_gInputText1 ]
Variable setzen [ $Command_GUI ; _Home::_gInputText2 ]
Variable setzen [ $Command_Version ; _Home::_gInputText3 ]
Wenn [ Hole ( LetzteMeldungswahl ) = 1 UND NICHT IstLeer( $Command_EN ) ]
	# Duplicate
	Datensatz/Abfrage duplizieren
	Wenn [ NICHT IstLeer( $Sort ) ]
		Feldwert setzen [ _Syntax::Sort ; $Sort ]
	Ende (wenn)
	Feldwert setzen [ _Syntax::Command_EN ; $Command_EN ]
	Wenn [ NICHT IstLeer( $Command_GUI ) ]
		Feldwert setzen [ Syntax.GUISyntax::Command ; $Command_GUI ]
	Ende (wenn)
	Feldwert setzen [ _Syntax::FM_Version ; $Command_Version ]
	Schreibe Änderung Datens./Abfrage [ Mit Dialog: OFF ]
Ende (wenn)
