tests/snapshots/scripts_sanitized/fmSyntaxColorizer/fmSyntaxColorizer - ID 64/Syntax - ID 56/Filter FM-Version - ID 172.txt.snap
---
source: src/main.rs
expression: output_content
---
# 20160923 MrW 

Eigenes Dialogfeld anzeigen [ ⚠️ PARAMETER "Message" NOT PARSED ⚠️ ; ⚠️ PARAMETER "Button1" NOT PARSED ⚠️ ; ⚠️ PARAMETER "Button2" NOT PARSED ⚠️ ; ⚠️ PARAMETER "Button3" NOT PARSED ⚠️ ; ⚠️ PARAMETER "Field1" NOT PARSED ⚠️ ]
Wenn [ Hole( LetzteMeldungswahl )= 1 ]
	Script ausführen [ Aus Liste ; "Go to Syntax for given FM-Version" ]
Ende (wenn)
