tests/snapshots/scripts_sanitized/fmSyntaxColorizer/fmSyntaxColorizer - ID 64/Syntax - ID 56/OnObjectModify ColorName #T# - ID 63.txt.snap
---
source: src/main.rs
expression: output_content
---
# 20210916 MrW Removed lingering pesky German :D
# 20121030 MrW 

Wenn [ IstLeer( _Syntax::_kColorNameWithoutNone ) ]
	Schreibe Änderung Datens./Abfrage [ Mit Dialog: OFF ]
	Aktuelles Script verlassen []
	# --&gt;
Ende (wenn)

Wenn [ _Syntax::ColorName = "++New++" ]
	Feldwert setzen [ _Syntax::ColorName ; _Syntax::Command_EN ]
	Eigenes Dialogfeld anzeigen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "87" ] ⚠️⚠️⚠️
	Wenn [ Hole( LetzteMeldungswahl ) = 2 ]
		# Cancel
		Verwerfe Änderung Datens./Abfrage ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "51" ] ⚠️⚠️⚠️
		# --&gt;
	Ende (wenn)
	Schreibe Änderung Datens./Abfrage [ Mit Dialog: OFF ]
Ende (wenn)

Wenn [ IstLeer( Syntax.Color::ColorInput ) ]
	# Create missing color
	Feldwert setzen [ Syntax.Color::ColorInput ; Char( 9608 ) /* Full block */ ]
	Schreibe Änderung Datens./Abfrage [ Mit Dialog: OFF ]
Ende (wenn)
