tests/snapshots/scripts_sanitized/fmSyntaxColorizer/fmSyntaxColorizer - ID 64/Syntax - ID 56/Read and Edit Syntax Comment - ID 116.txt.snap
---
source: src/main.rs
expression: output_content
---
# 20210916 MrW Removed lingering pesky German :D
# 20121102 MrW 

AnwenderAbbruchZulassen setzen [ OFF ]
Fehleraufzeichnung setzen [ ON ]

Wenn [ Hole( Fenstermodus ) = 1 ]
	Eigenes Dialogfeld anzeigen [ ⚠️ PARAMETER "Title" NOT PARSED ⚠️ ; ⚠️ PARAMETER "Message" NOT PARSED ⚠️ ; ⚠️ PARAMETER "Button1" NOT PARSED ⚠️ ; ⚠️ PARAMETER "Button2" NOT PARSED ⚠️ ; ⚠️ PARAMETER "Button3" NOT PARSED ⚠️ ; ⚠️ PARAMETER "Field1" NOT PARSED ⚠️ ; Target: _Syntax::Comment ; ⚠️ PARAMETER "Label" NOT PARSED ⚠️ ]
Sonst
	Schleife (Anfang) [ Flush: Immer ]
		Wenn [ NICHT IstLeer( _Syntax::Comment ) ]
			# Read
			Eigenes Dialogfeld anzeigen [ ⚠️ PARAMETER "Title" NOT PARSED ⚠️ ; ⚠️ PARAMETER "Message" NOT PARSED ⚠️ ; ⚠️ PARAMETER "Button1" NOT PARSED ⚠️ ; ⚠️ PARAMETER "Button2" NOT PARSED ⚠️ ; ⚠️ PARAMETER "Button3" NOT PARSED ⚠️ ]
			Verlasse Schleife wenn [ Hole ( LetzteMeldungswahl ) = 1 ]
		Ende (wenn)
		# Edit
		Variable setzen [ $Comment ; _Syntax::Comment ]
		Eigenes Dialogfeld anzeigen [ ⚠️ PARAMETER "Title" NOT PARSED ⚠️ ; ⚠️ PARAMETER "Message" NOT PARSED ⚠️ ; ⚠️ PARAMETER "Button1" NOT PARSED ⚠️ ; ⚠️ PARAMETER "Button2" NOT PARSED ⚠️ ; ⚠️ PARAMETER "Button3" NOT PARSED ⚠️ ; ⚠️ PARAMETER "Field1" NOT PARSED ⚠️ ; Target: _Syntax::Comment ; ⚠️ PARAMETER "Label" NOT PARSED ⚠️ ]
		Verlasse Schleife wenn [ IstLeer( _Syntax::Comment ) ODER _Syntax::Comment = $Comment ]
	Schleife (Ende)
Ende (wenn)
