tests/snapshots/scripts_sanitized/fmSyntaxColorizer/fmSyntaxColorizer - ID 64/Syntax - ID 56/Remove all - ID 62.txt.snap
---
source: src/main.rs
expression: output_content
---
# 20121102 MrW Refreshes the currently found commands

Schreibe Änderung Datens./Abfrage [ Mit Dialog: OFF ]
Blätternmodus aktivieren [ Pause: OFF ]
Gehe zu Layout [ Layout: "Syntax" ; Animation: Ohne ]
Ersetze alle Feldwerte [ _Syntax::On ; Durch Berechnung ersetzen: 1 ]
Schreibe Änderung Datens./Abfrage [ Mit Dialog: OFF ]
